--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nwidart/templates",
+    "name": "nwidart/examples",
     "description": "",
     "authors": [
         {
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Modules\\Templates\\": ""
+            "Modules\\Examples\\": ""
         }
     }
 }
